--- a/assets/scss/modules/_base-styles.scss
+++ b/assets/scss/modules/_base-styles.scss
@@ -1,7 +1,10 @@
+/* SETUP CHILD | 1.0.0 | 210210 | assets/scss/partials/base-styles.scss
+---------------------------------------------------------------------------------------------------- */
+
 @mixin base-style {
 	color: $base-color;
 	font-family: $sans-serif;
-	@include font-sizes( 18px, 20px );
+	@include font-sizes( 1rem, 1.125rem );
 	font-weight: 400;
 	line-height: 1.55;
 
