--- a/assets/scss/partials/_blocks-core.scss
+++ b/assets/scss/partials/_blocks-core.scss
@@ -1,16 +1,64 @@
+/* SETUP CHILD | 1.0.0 | 210210 | assets/scss/partials/blocks-core.scss
+---------------------------------------------------------------------------------------------------- */
+
 /* Button
 --------------------------------------------- */
 
 $default: nth( nth( $brand_colors, 1 ), 1 ); // first color in $brand_colors array
 
+.wp-block-buttons {
+
+	.wp-block-button {
+		margin: 0;
+	}
+
+	.wp-block-button.is-style-full {
+		display: block;
+	}
+
+}
+
 .wp-block-button__link {
-	border: 2px solid brand-color( $default, 'darken' );
+	//border: 2px solid brand-color( $default, 'darken' );
 	border-radius: 3px;
-	font-size: 20px;
+	@include font-sizes( 1rem, 1.125rem );
 	font-weight: 700;
-	line-height: 32px;
-	padding: 16px 32px;
+	line-height: 1.2;
+	//line-height: 32px;
+	padding: 16px 18px;
 	text-decoration: none;
+
+	.large & {
+		@include font-sizes( 1.5rem, 1.875rem, 2.25rem );
+		line-height: 1.2;
+		padding: 24px 36px;
+	}
+
+	.medium & {
+		@include font-sizes( 1.25rem, 1.375rem, 1.5rem );
+		line-height: 1.2;
+		padding: 20px 24px;
+	}
+
+	.small & {
+		@include font-sizes( 1.125rem, 1.25rem );
+		line-height: 1.2;
+		padding: 18px 20px;
+	}
+
+	.smaller & {
+		font-size: 0.875rem;
+		//font-size: 14px;
+		line-height: 1.2;
+		padding: 8px 14px;
+	}
+
+	.tiny & {
+		font-size: 0.75rem;
+		//font-size: 12px;
+		line-height: 1.2;
+		padding: 6px 12px;
+	}
 
 	.is-style-full &,
 	&.full {
@@ -110,6 +158,10 @@ hr {
 /* Image
 --------------------------------------------- */
 
+figure {
+	margin: 0;
+}
+
 img {
 	display: block;
 	max-width: 100%;
@@ -162,24 +214,18 @@ img {
 		color: $color;
 	}
 
-	.has-#{$name}-background-color {
+	.has-#{$name}-background-color,
+	.wp-block-cover-image.has-background-dim.has-#{$name}-background-color,
+	.wp-block-cover.has-background-dim.has-#{$name}-background-color {
 		background-color: $color;
 	}
+
 }
 
 /* Group
 --------------------------------------------- */
 
 .wp-block-group {
-	padding: 40px 16px;
-
-	@include media(">=tablet") {
-		padding: 60px 16px;
-	}
-
-	@include media(">=medium") {
-		padding: 70px 16px;
-	}
 
 	.wp-block-group__inner-container {
 		max-width: $content_width;
@@ -193,10 +239,59 @@ img {
 
 	// Dark background
 	&.has-background:not(.has-grey-background-color) {
-		color: $white;
+		h1, h2, h3, h4, h5, h6, p {}
+	}
 
-		h1, h2, h3, h4, h5, h6, p {
-			color: $white;
+}
+
+.block-editor-block-list__layout .wp-block-group {
+	border-top: 1px dashed #ccc;
+	border-left: 1px dashed #ccc;
+	padding-top: 0.5rem;
+	padding-left: 0.5rem;
+	background-color: #ffffe0;
+}
+.block-editor-block-list__layout .wp-block-group .wp-block-group {
+	background-color: #ffffe0;
+}
+
+/* YouTube
+--------------------------------------------- */
+
+.wp-block-embed__wrapper {
+
+	.wp-block-embed-youtube.alignwide &,
+	.wp-block-embed-youtube.alignfull & {
+		position: relative;
+		padding-bottom: 56.25%; /* 16:9 */
+	}
+	@include media("<=medium") {
+		.wp-block-embed-youtube & {
+			position: relative;
+			padding-bottom: 56.25%; /* 16:9 */
+		}
+	}	
+
+}
+
+iframe {
+
+	.wp-block-embed-youtube.alignwide &,
+	.wp-block-embed-youtube.alignfull & {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+	}
+	@include media("<=medium") {
+		.wp-block-embed-youtube & {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
 		}
 	}
+
 }
