--- a/assets/scss/partials/_form.scss
+++ b/assets/scss/partials/_form.scss
@@ -1,3 +1,6 @@
+/* SETUP CHILD | 1.0.0 | 210210 | assets/scss/partials/form.scss
+---------------------------------------------------------------------------------------------------- */
+
 /* Forms
 --------------------------------------------- */
 
