--- a/assets/scss/editor-style.scss
+++ b/assets/scss/editor-style.scss
@@ -1,7 +1,20 @@
-@import "partials/base";
-@import "partials/blocks-base";
-@import "partials/blocks-core";
-@import "partials/blocks-plugin";
-@import "partials/blocks-custom";
-@import "partials/post-summary";
-@import "partials/gutenberg";
+/* SETUP CHILD | 1.0.0 | 210210 | assets/scss/editor-style.scss
+---------------------------------------------------------------------------------------------------- */
+
+@import 	"partials/base";
+@import 	"partials/blocks-base";
+@import		"partials/blocks-core";
+@import		"partials/blocks-plugin";
+@import		"partials/blocks-custom";
+@import		"partials/post-summary";
+@import		"partials/gutenberg";
+
+@import 	"type/setup-child-100/fontsize";
+@import 	"type/setup-child-100/lineheight";
+@import 	"ui/setup-child-100/color";
+@import 	"ui/setup-child-100/margin";
+@import 	"ui/setup-child-100/margin-all";
+@import 	"ui/setup-child-100/padding";
+@import 	"ui/setup-child-100/padding-all";
+@import 	"ui/setup-child-100/border";
+@import 	"ui/setup-child-100/heading";
