--- a/assets/scss/partials/_entry-content.scss
+++ b/assets/scss/partials/_entry-content.scss
@@ -1,3 +1,6 @@
+/* SETUP CHILD | 1.0.0 | 210210 | assets/scss/partials/entry-content.scss
+---------------------------------------------------------------------------------------------------- */
+
 ul, ol {
 	padding-left: 1.5rem;
 
