--- a/assets/scss/partials/_gutenberg.scss
+++ b/assets/scss/partials/_gutenberg.scss
@@ -1,3 +1,6 @@
+/* SETUP CHILD | 1.0.0 | 210210 | assets/scss/partials/gutenberg.scss
+---------------------------------------------------------------------------------------------------- */
+
 body, p {
 	@include base-style();
 }
