--- a/assets/scss/partials/_post-summary.scss
+++ b/assets/scss/partials/_post-summary.scss
@@ -1,45 +1,246 @@
-/* Post Summary
+/* SETUP CHILD | 1.0.0 | 210210 | assets/scss/partials/post-summary.scss
 ---------------------------------------------------------------------------------------------------- */
 
-.post-summary {
-	margin-bottom: $grid-gap;
-}
+// MODULE POST-SUMMARY
+//
 
-.post-summary__title {
-	font-size: 18px;
-	font-weight: 400;
-	margin: 0;
+.module.post-summary {}
+.module.post-summary.x2 {}
+.module.post-summary.x3 {}
+.module.post-summary.x4 {}
+.module.post-summary.x5 {}
 
-	a {
-		color: $grey_10;
-		text-decoration: none;
 
-		&:hover {
-			color: $highlight;
+// IMAGE
+//
+// setup_be_image();
+// setup_be_image_nolink();
+
+.item.image {
+	.module.post-summary & {
+		display: block;
+		margin-bottom: 1rem;
+		img {}
+		.item.img {
+			margin-bottom: 0;
 		}
 	}
 }
-
-.post-summary__image {
-	display: block;
-	@include media(">small") {
-		margin-bottom: 12px;
+a.item.image.link {
+	.module.post-summary & {}
+}
+.item.img {
+	.module.post-summary & {
+		margin-bottom: 1rem;
 	}
 }
 
-.entry-category {
-	font-size: 12px;
-	font-weight: 700;
-	text-transform: uppercase;
-	letter-spacing: 1px;
-	margin-bottom: 4px;
+// BGIMAGE
+//
+// setup_be_bgimage();
+// setup_be_bgimage_nolink();
+
+.item.bgimage {
+	.module.post-summary & {
+		display: block;
+		margin-bottom: 1rem;
+		background-size: cover;
+		background-position: center;
+		padding-top: calc(2 / 3 * 100%);
+	}
+}
+a.item.bgimage.link {
+	.module.post-summary & {
+		&:hover {}
+	}
+}
+
+
+// OVERLINE
+//
+// setup_be_overline();
+// setup_be_overline_nolink();
+
+.item.overline {
+
+	.module.post-summary & {
+		font-size: 0.75rem;
+		font-weight: 700;
+		text-transform: uppercase;
+		letter-spacing: 1px;
+		margin-bottom: 4px;
+
+		a {
+			color: $grey_8;
+			text-decoration: none;
+
+			&:hover {
+				color: $highlight;
+			}
+		}
+	}
+
+	.module.x2 & {}
+	.module.x3 & {
+		font-size: 0.875rem;
+	}
+	.module.x4 & {
+		@include font-sizes( 0.875rem, 1rem );
+	}
+	.module.x5 & {
+		@include font-sizes( 0.875rem, 1rem );
+	}
+
+}
+
+
+// TITLE
+//
+// setup_be_title() {;
+// setup_be_title_nolink() {;
+
+.item.title {
+
+	.module.post-summary & {
+		@include font-sizes( 1.125rem, 1.25rem );
+		font-weight: 500;
+		margin-bottom: 2px;
+
+		a {
+			color: $grey_10;
+			text-decoration: none;
+
+			&:hover {
+				color: $highlight;
+			}
+		}
+	}
+
+	.module.x2 & {
+		@include font-sizes( 1.25rem, 1.375rem, 1.5rem );
+	}
+	.module.x3 & {
+		@include font-sizes( 1.5rem, 1.875rem, 2.25rem );
+	}
+	.module.x4 & {
+		@include font-sizes( 2.25rem, 2.625rem, 3rem );
+	}
+	.module.x5 & {
+		@include font-sizes( 3.25rem, 3.625rem, 4rem );
+	}
+}
+
+
+// AUTHOR, DATE, DATEAUTHOR
+
+.item.author,
+.item.date,
+.item.dateauthor {
+
+	.module.post-summary & {
+		margin-top: 1rem;
+		font-size: 0.875rem;
+
+		a {
+			color: $grey_10;
+			text-decoration: none;
+
+			&:hover {
+				color: $highlight;
+			}
+		}
+	}
+
+	.module.x2 & {}
+	.module.x3 & {
+		@include font-sizes( 0.875rem, 1rem );
+	}
+	.module.x4 & {
+		@include font-sizes( 0.875rem, 1rem );
+	}
+	.module.x5 & {
+		@include font-sizes( 1rem, 1.125rem );
+	}
+}
+
+
+
+// AUTHOR
+//
+// setup_be_author_name() {;
+// setup_be_author_by_name() {;
+// setup_be_author_gravatar_name() {;
+// setup_be_author_gravatar_by_name() {;
+
+.item.author {
+	.module.post-summary & {}
+}
+/**
+ * Need to fix gravatar styles eventually
+ */
+
+
+// DATE
+//
+// setup_be_date_mdy() {;
+// setup_be_date_weekday_mdy() {;
+
+.item.date {
+	.module.post-summary & {}
+}
+
+
+// DATE & AUTHOR (ITEMS)
+// 
+// setup_be_date_by_author_name();
+// setup_be_date_vbar_author_name();
+
+.item.dateauthor {
+	.module.post-summary & {}
+}
+
+
+// EXCERPT
+//
+// setup_be_excerpt();
+// setup_be_excerpt_maxwords();
+
+.item.excerpt {
+
+	.module.post-summary & {
+		font-size: 1rem;
+	}
+
+	.module.x2 & {}
+	.module.x3 & {
+		@include font-sizes( 1rem, 1.125rem );
+	}
+	.module.x4 & {
+		@include font-sizes( 1rem, 1.125rem );
+	}
+	.module.x5 & {
+		@include font-sizes( 1.125rem, 1.25rem );
+	}
+}
+
+
+// EDIT
+// 
+// setup_be_edit();
+
+.item.edit {
 
 	a {
-		color: $grey_8;
+		font-size: 0.5rem;
+		color: #fff;
+		background-color: #ccc;
+		padding: 2px 5px;
+		border-radius: 5px;
 		text-decoration: none;
-
+		
 		&:hover {
-			color: $highlight;
+			background-color: $highlight;
 		}
+
 	}
 }
