--- a/assets/scss/partials/_site-header.scss
+++ b/assets/scss/partials/_site-header.scss
@@ -1,27 +1,40 @@
+/* SETUP CHILD | 1.0.0 | 210210 | assets/scss/partials/site-header.scss
+---------------------------------------------------------------------------------------------------- */
+
+	// 360px & ABOVE
+	@include media(">=tiny") {}
+	// 425px & ABOVE
+	@include media(">=smaller") {}
+	// 512px & ABOVE
+	@include media(">=small") {}
+	// 768px & ABOVE
+	@include media(">=tablet") {}
+	// 992px & ABOVE
+	@include media(">=medium") {}
+	// 1200px & ABOVE
+	@include media(">=large") {}
+
 /* Site Header
 ---------------------------------------------------------------------------------------------------- */
 
 .site-header {
+	padding: 1.5rem;
 	background: $white;
-	border-bottom: 1px solid $border-color;
 	position: relative;
-	min-height: 49px;
+	border-bottom: 1px solid #eee;
+
+	.wrap {}
 }
 
 .title-area {
-	float: left;
-	width: 100%;
-	max-width: $logo_width;
-	text-align: left;
-	margin: 0 auto;
+	text-align: center;
 
 	h1.site-title,
 	p.site-title {
 		margin: 0;
-		font-size: 24px;
-		line-height: 30px;
-
-		padding: 8px;
+		font-size: 1.5rem;
+		line-height: 1.875rem;
+		font-weight: 700;
 
 		a {
 			color: $base-color;
@@ -29,29 +42,12 @@
 		}
 	}
 
-/*
-	.site-title a {
-	  	background: url(../icons/logo.svg) no-repeat center;
-	  	background-size: contain;
-		display: block;
-		text-indent: -9999em;
-		width: 100%;
-		height: 0;
-		padding-bottom: 139px / 623px * 100%;
+	// LOGO BACKGROUND
+	.site-title a {}
+
+	.site-description {
+		margin-bottom: 0;
 	}
-*/
-
-	@include media("<=mobile_menu") {
-		float: none;
-		text-align: center;
-
-		.site-title a {
-			padding-bottom: 0;
-			height: 48px;
-			background-size: auto 42px;
-		}
-	}
-
 
 }
 
