--- a/style.css
+++ b/style.css
@@ -1,16 +1,10 @@
 /*
-	Theme Name:  Your Website
-	Description: Custom child theme for the <a href="http://genesistheme.com">Genesis Framework</a>.
-	Author:      Bill Erickson
-	Author URI:  https://www.billerickson.net
+	Theme Name:  Setup Child
+	Description: Starter child theme using Genesis Framework
+	Author:      Mark Corpuz
+	Author URI:  https://markcorpuz.com
 	Version:     1.0.0
 	License:     GPL-2.0+
 	License URI: http://www.gnu.org/licenses/gpl-2.0.html
 	Template:    genesis
-*/
-
-/*
-BEFORE MODIFYING THIS THEME:
-Please read the instructions here (private repo): https://github.com/billerickson/EA-Starter/wiki
-Devs, contact me if you need access
 */
