--- a/assets/scss/partials/_singular.scss
+++ b/assets/scss/partials/_singular.scss
@@ -1,4 +1,4 @@
-/* SETUP CHILD | 1.0.0 | 210210 | assets/scss/partials/singular.scss
+/* SETUP CHILD | 1.0.0 | 210226 | assets/scss/partials/singular.scss
 ---------------------------------------------------------------------------------------------------- */
 
 /* Singular
@@ -88,6 +88,22 @@
 			max-width: 100vw;
 			width: 100vw;
 		}
+
+		&:first-child {
+			margin-top: 0;
+		}
+		&:last-child {
+			margin-bottom: 0;
+		}
+
+		&.alignwide.margin-zero-top,
+		&.alignfull.margin-zero-top, {
+			margin-top: 0;
+		}
+		&.alignwide.margin-zero-bottom,
+		&.alignfull.margin-zero-bottom, {
+			margin-bottom: 0;
+		}
 	}
 
 	&.alignleft {
@@ -121,6 +137,7 @@
 
 }
 
+/*
 .entry-content > .alignfull {
 
 	&:first-child {
@@ -138,6 +155,7 @@
 	}
 
 }
+*/
 
 
 /* Entry Meta
