setup-child | Adjustments to author box layout

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,4 +1,4 @@
-/* SETUP CHILD | 1.0.0 | 210320 | assets/scss/main.scss
+/* SETUP CHILD | 1.0.0 | 210429 | assets/scss/main.scss
 ---------------------------------------------------------------------------------------------------- */
 
 @import 	"partials/base";
@@ -19,6 +19,7 @@
 @import 	"partials/post-summary";
 @import 	"partials/archive";
 @import 	"partials/singular";
+@import 	"partials/author";
 @import 	"partials/site-footer";
 
 @import 	"block/setup-child-100/alignwide";
